# pokeysHal

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  INTERFACE_PARITY_ANALYSIS.md  Makefile.noqmake  Makefile.noqmake.osx  Makefile.noqmakeRT  PoKeysLib.h  PoKeysLib.pro  PoKeysLib1Wire.c  PoKeysLib1WireAsync.c  PoKeysLibAdvancedRTAsync.c  PoKeysLibAsync.c  PoKeysLibAsync.h  PoKeysLibCAN.c  PoKeysLibCANAsync.c  PoKeysLibCOSM.c  PoKeysLibCOSMAsync.c  PoKeysLibCore.c  PoKeysLibCore.h  PoKeysLibCoreAsync.c  PoKeysLibCoreSockets.c  PoKeysLibCoreSockets.h  PoKeysLibCoreSocketsAsync.c  PoKeysLibCoreSocketsAsync.h  PoKeysLibDeviceData.c  PoKeysLibDeviceDataAsync.c  PoKeysLibDevicePoKeys57Industrial.c  PoKeysLibDevicePoKeys57Industrial.h  PoKeysLibDevicePoKeys57IndustrialAsync.c  PoKeysLibDeviceStatusAsync.c  PoKeysLibEasySensors.c  PoKeysLibEasySensorsAsync.c  PoKeysLibEncoders.c  PoKeysLibEncodersAsync.c  PoKeysLibFailsafe.c  PoKeysLibFailsafeAsync.c  PoKeysLibHal.h  PoKeysLibI2C.c  (+32 more)
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
docs/: Complete_Implementation_Summary.md  Failsafe_commands.md  Final_Implementation_Status.md  INDEX.md  IO_Async_Implementation_Analysis.md  MatrixKeyboard_commands.md  MatrixLED_commands.md  PoNET_Linker_Error_Fix.md  PoNET_kbd48CNC_Analysis.md  TESTING_CONCEPT.md  TESTING_SUCCESS_SUMMARY.md  Todo.md  UART_commands.md
experimantal/: pokeys_async.c  pokeys_async.comp
experimental/: Submakefile.rt  async_scheduler.c  async_scheduler.h  pokeys_async.c  pokeys_async.comp  pokeys_async2.c  pokeys_async2.comp
(+130 files in other folders)
